langtools/test/tools/javac/typeAnnotations/failures/common/innertypeparams/DuplicateTypeAnnotation.out
DuplicateTypeAnnotation.java:10:20: compiler.err.duplicate.annotation
1 error
